<resources>
    <string name="app_name">벗</string>

    <string name="developer_key">9f081460-6001-4dfc-a4cd-60282bbcd701</string>

    <string name="create_channel">CREATE CHANNEL</string>
    <string name="connect">CONNECT</string>
    <string name="exit_text">EXIT</string>
    <string name="connect_channel_id_hint">Enter the Channel ID</string>

    <string name="alert_title">@string/app_name</string>
    <string name="alert_message">Would like to exit?</string>
    <string name="alert_positive">OK</string>
    <string name="alert_negative">Cancle</string>
    
    <string name="videotelephony">화상통화</string>
    <string name="join_title">회원가입</string>
    <string name="login_string">로그인</string>
    <string name="logout_text">로그아웃</string>
    <string name="list">목록</string>

    <string name="family">가족</string>
    <string name="friend">독거노인</string>
    <string name="social_worker">사회복지사</string>

    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>

    <string name="receive">수신</string>
    <string name="reject">거절</string>

    <string name="join_from_name_string">회원가입</string>
    <string name="join_id_string">ID : </string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="join_password_string">Password : </string>
    <string name="password_hint">비밀번호를 입력하세요.</string>
    <string name="join_nickname_string">Nickname : </string>
    <string name="nickname_hint">별명을 입력하세요.</string>
    <string name="join_name_string">이름 : </string>
    <string name="name_hint">이름을 입력하세요.</string>
    <string name="join_gender_string">성별 : </string>
    <string name="gender_hint">성별을 입력하세요.</string>
    <string name="join_kind_string">누구 : </string>
    <string name="kind_hint">누구인지?</string>

    <string name="male_string">남자</string>
    <string name="female_string">여자</string>

    <string name="submit_button_text">회원가입</string>
    <string name="reject_button_text">취소</string>

    <string name="login_from_name_string">로그인</string>
</resources>
