<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/join_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/join_from_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/join_from_name_string"
            android:textColor="@color/black"
            android:textSize="@dimen/join_id_text_size" />

        <LinearLayout
            android:id="@+id/join_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_from_text"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/join_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_id_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/join_id_text_size" />

                <EditText
                    android:id="@+id/join_id_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/join_id_text"
                    android:hint="@string/id_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/join_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_password_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/join_id_text_size" />

                <EditText
                    android:id="@+id/join_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/join_password_text"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
            <!--android:id="@+id/join_nickname_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/join_nickname_string"-->
            <!--android:textSize="@dimen/join_id_text_size" />-->

            <!--<EditText-->
            <!--android:id="@+id/join_nickname_edit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/join_nickname_text"-->
            <!--android:hint="@string/nickname_hint" />-->
            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/join_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_name_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/join_id_text_size" />

                <EditText
                    android:id="@+id/join_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/join_name_text"
                    android:hint="@string/name_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/join_gender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_gender_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/join_id_text_size" />

                <!--<EditText-->
                <!--android:id="@+id/join_gender_edit"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_toRightOf="@id/join_gender_text"-->
                <!--android:hint="@string/gender_hint" />-->

                <RadioGroup
                    android:id="@+id/radio_group_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male_string"
                        android:textColor="@color/black"
                        android:textSize="@dimen/radio_size" />

                    <RadioButton
                        android:id="@+id/radio_button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female_string"
                        android:textColor="@color/black"
                        android:textSize="@dimen/radio_size" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/join_kind_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_kind_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/join_id_text_size" />

                <!--<EditText-->
                <!--android:id="@+id/join_kind_edit"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_toRightOf="@id/join_kind_text"-->
                <!--android:hint="@string/kind_hint" />-->

                <RadioGroup
                    android:id="@+id/radio_group_kind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_elderly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friend"
                        android:textColor="@color/black"
                        android:textSize="@dimen/radio_size" />

                    <RadioButton
                        android:id="@+id/radio_button_family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/family"
                        android:textColor="@color/black"
                        android:textSize="@dimen/radio_size" />


                    <RadioButton
                        android:id="@+id/radio_button_socialworker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_worker"
                        android:textColor="@color/black"
                        android:textSize="@dimen/radio_size" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/join_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:text="@string/submit_button_text"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/join_reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:text="@string/reject_button_text"
            app:bootstrapBrand="danger"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />
    </LinearLayout>
</RelativeLayout>