<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_from_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_from_name_string"
        android:textSize="@dimen/join_id_text_size" />

    <LinearLayout
        android:id="@+id/login_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_from_text"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/basic_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_id_string"
                android:textSize="@dimen/join_id_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/login_id_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_hint"
                android:windowSoftInputMode="stateHidden|stateAlwaysVisible|adjustResize"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:roundedCorners="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/basic_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_password_string"
                android:textSize="@dimen/join_id_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:windowSoftInputMode="stateHidden|stateAlwaysVisible|adjustResize"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:roundedCorners="true" />
            <!--<EditText-->
            <!--android:id="@+id/login_id_edit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/login_id_text"-->
            <!--android:hint="@string/id_hint" />-->

            <!--<EditText-->
            <!--android:id="@+id/login_password_edit"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/login_password_text"-->
            <!--android:hint="@string/password_hint"-->
            <!--android:inputType="textPassword" />-->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_from"
        android:gravity="center">

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_string" />

        <!--<Button-->
        <!--android:id="@+id/login_reject"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/reject_button_text" />-->

        <Button
            android:id="@+id/login_join_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_title" />
    </LinearLayout>
</RelativeLayout>