<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".mainactivity.MainActivity"
    android:background="@color/background_white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:layout_weight="1"
            app:bootstrapBrand="primary"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:showOutline="true"
            app:roundedCorners="true"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friend"
            android:layout_weight="1"
            app:bootstrapBrand="success"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:showOutline="true"
            app:roundedCorners="true"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_social_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_worker"
            android:layout_weight="1"
            app:bootstrapBrand="warning"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:showOutline="true"
            app:roundedCorners="true"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            android:layout_weight="1"
            app:bootstrapBrand="danger"
            app:bootstrapSize="xl"
            app:buttonMode="regular"
            app:showOutline="true"
            app:roundedCorners="true"
            />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>